Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int* LPBOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    USHORT msgopt;              //Driver writes message options
    USHORT msgact;              //Card writes message activity
    union {
        ULONG  msgdata;         //Card/User writes message data (Rcv/Xmt)
        ULONG  listptr;         //Driver writes list buffer pointer
    };
    union {
        ULONG  timetag;         //Card writes timetag
        ULONG  hitcount;        //Card writes hit count
    };
    union {
        ULONG  maxtime;         //Card writes max time
        ULONG  elapsetime;      //Card writes elapsed time
    };
    ULONG  mintime;             //Card writes min time
    ULONG  userptr;             //Driver writes user code pointer
    ULONG  timetagh;            //Card writes extended timetag
    USHORT decgap;              //Card writes measured decoder gap time (rsvd for xmt msg)
    USHORT paramflag;           //Driver/User writes parametric bitrate configuration
} MSGFIELDS429;
typedef MSGFIELDS429 * LPMSGFIELDS429;
typedef struct
{
	INT		highvolt;		// Absolute voltage of the first half of one-bit (in millivolts)
	INT		lowvolt;		// Absolute voltage of the second half of one-bit (in millivolts)
	INT		nullvolt;		// Absolute voltage of the second half of one-bit (in millivolts)
	INT		highrise;		// rise and fall time of the one-bit (in nanoseconds)
	INT		lowrise;		// Rise and fall time of the zero-bit (in nanoseconds)
	INT		biasvolt;		// Common-mode bias of the entire signal (in millivolts)
} PARAMFIELDS429;
typedef PARAMFIELDS429 * LPPARAMFIELDS429;
BTI429API BOOL __stdcall BTI429_ListDataBlkWr(LPULONG dataptr,USHORT datacount,LISTADDR listaddr,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ListDataRdEx(INT index,LISTADDR listaddr,HCORE handleval);
BTI429API VOID __stdcall BTI429_ListDataWrEx(ULONG value,INT index,LISTADDR listaddr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ListNextRd(ULONG listaddr,LPUSHORT header,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ListNextWr(ULONG listaddr,LPUSHORT header,HCORE handleval);
BTI429API VOID __stdcall BTI429_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI429API VOID __stdcall BTI429_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI429API VOID __stdcall BTI429_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI429API VOID __stdcall BTI429_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI429API USHORT __stdcall BTI429_MsgActivityRd(MSGADDR msgaddr,HCORE handleval);
BTI429API VOID __stdcall BTI429_MsgActivityWr(USHORT value,MSGADDR msgaddr,HCORE handleval);
BTI429API USHORT __stdcall BTI429_MsgCheck(MSGADDR msgaddr,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_MsgCommRd(LPMSGFIELDS429 msgfields,MSGADDR msgaddr,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_MsgCommWr(LPMSGFIELDS429 msgfields,MSGADDR msgaddr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_MsgConfig(ULONG configval,MSGADDR msgaddr,HCORE handleval);
BTI429API BOOL __stdcall BTI429_MsgMultiSkipWr(LPBOOL skip,LPMSGADDR msgaddr,INT msgcount,HCORE handleval);
BTI429API USHORT __stdcall BTI429_MsgOptRd(MSGADDR msgaddr,HCORE handleval);
BTI429API VOID __stdcall BTI429_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ParamWaveformConfig(ULONG configval,INT highvolt,INT lowvolt,INT nullvolt,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ParamWaveformConfigEx(ULONG configval,LPPARAMFIELDS429 paramflds,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched1Build(INT basemsgnum,INT nummsgs,LPMSGADDR msgaddr,LPINT minperiodIn,LPINT maxperiodIn,BOOL speed,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched2AdvanceMessage(INT entries,INT panicindex,INT nummsgs,LPVOID infoptr,LPINT nextdeltaptr,INT ulMasterTimer,LPMSGADDR msgaddrptr,BOOL debugflag,BOOL tryflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched2AdvanceNoMessage(INT nummsgs,LPVOID infoptr,LPINT nextdeltaptr,INT ulMasterTimer,LPMSGADDR msgaddrptr,BOOL debugflag,BOOL tryflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_Sched2Analyze(INT nummsgs,LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_Sched2Build(INT nummsgs,LPMSGADDR msgaddrptr,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched2BuildEx(LPINT styleptr,INT nummsgs,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL interceptflag);
BTI429API ERRVAL __stdcall BTI429_Sched2BuildExx(INT style,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL tryflag,INT nummsgs,LPINT minlist,LPINT maxlist,LPINT entriesptr,LPINT maxentriesptr,LPVOID infoptr,LPMSGADDR msgaddrptr,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched3Build(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCARD handleval);
BTI429API ERRVAL __stdcall BTI429_Sched3BuildEx(INT basemsgnum,INT nummsgs,LPMSGADDR msgaddr,LPINT minperiodIn,LPINT maxperiodIn,INT speed,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCARD handleval);
BTI429API ULONG __stdcall BTI429_Sched3Calc(LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_Sched3Check(LPINT minperiod,LPINT maxperiod,LPVOID infoptr);
BTI429API ULONG __stdcall BTI429_Sched3ToBit(ULONG value,LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_Sched4AdvanceMessage(INT entries,INT panicindex,INT nummsgs,LPVOID infoptr,LPINT nextdeltaptr,INT ulMasterTimer,LPMSGADDR msgaddrptr,BOOL debugflag,BOOL tryflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched4AdvanceNoMessage(INT nummsgs,LPVOID infoptr,LPINT nextdeltaptr,INT ulMasterTimer,LPMSGADDR msgaddrptr,BOOL debugflag,BOOL tryflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_Sched4Analyze(INT nummsgs,LPVOID infoptr);
BTI429API ERRVAL __stdcall BTI429_Sched4Build(INT nummsgs,LPMSGADDR msgaddrptr,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_Sched4BuildEx(LPINT styleptr,INT nummsgs,INT minorframetime,INT majorframetime,LPINT targetlist,LPINT minlist,LPINT maxlist,BOOL speedflag,BOOL microflag,BOOL interceptflag);
BTI429API ERRVAL __stdcall BTI429_Sched4BuildExx(INT style,BOOL speedflag,BOOL microflag,BOOL debugflag,BOOL tryflag,INT nummsgs,INT minorframetime,INT majorframetime,LPINT targetlist,LPINT minlist,LPINT maxlist,LPINT entriesptr,LPINT maxentriesptr,LPVOID infoptr,LPMSGADDR msgaddrptr,BOOL interceptflag,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_SchedAdvance(LPVOID infoptr);
BTI429API SCHNDX __stdcall BTI429_SchedAgain(SCHNDX index,INT channum,HCORE handleval);
BTI429API SCHNDX __stdcall BTI429_SchedBranchEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildAlt(INT nummsgs,LPMSGADDR msgaddrs,LPINT minperiod,LPINT maxperiod,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildBuf(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,INT bufcount,LPBYTE bufptr,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildBufEx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,BOOL debug,BOOL microflag,INT algorithm,INT bufcount,LPBYTE bufptr,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_SchedBuildExx(INT basemsgnum,INT nummsgs,LPMSGADDR msgaddr,LPINT minperiod,LPINT maxperiod,BOOL speed,LPVOID buf,ULONG bufsize,INT channum,HCORE handleval);