Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429VB.BAS

Public Declare Function BTI429_ListDataBlkWr Lib "BTI429.DLL" Alias "_BTI429_ListDataBlkWr@16" (ByRef dataptr As Long, ByVal datacount As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListDataRdEx Lib "BTI429.DLL" Alias "_BTI429_ListDataRdEx@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_ListDataWrEx Lib "BTI429.DLL" Alias "_BTI429_ListDataWrEx@16" (ByVal value As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long)
Public Declare Function BTI429_ListInit Lib "BTI429.DLL" Alias "_BTI429_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListNextRd Lib "BTI429.DLL" Alias "_BTI429_ListNextRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI429_ListNextWr Lib "BTI429.DLL" Alias "_BTI429_ListNextWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTI429_ListPostRd Lib "BTI429.DLL" Alias "_BTI429_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI429_ListPostWr Lib "BTI429.DLL" Alias "_BTI429_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI429_ListPreRd Lib "BTI429.DLL" Alias "_BTI429_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTI429_ListPreWr Lib "BTI429.DLL" Alias "_BTI429_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Function BTI429_MsgActivityRd Lib "BTI429.DLL" Alias "_BTI429_MsgActivityRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_MsgActivityWr Lib "BTI429.DLL" Alias "_BTI429_MsgActivityWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI429_MsgCheck Lib "BTI429.DLL" Alias "_BTI429_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI429_MsgCommRd Lib "BTI429.DLL" Alias "_BTI429_MsgCommRd@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_MsgCommWr Lib "BTI429.DLL" Alias "_BTI429_MsgCommWr@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_MsgConfig Lib "BTI429.DLL" Alias "_BTI429_MsgConfig@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_MsgMultiSkipWr Lib "BTI429.DLL" Alias "_BTI429_MsgMultiSkipWr@16" (ByRef skip As Long, ByRef msgaddr As Long, ByVal msgcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_MsgOptRd Lib "BTI429.DLL" Alias "_BTI429_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI429_MsgOptWr Lib "BTI429.DLL" Alias "_BTI429_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI429_MsgReset Lib "BTI429.DLL" Alias "_BTI429_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ParamWaveformConfig Lib "BTI429.DLL" Alias "_BTI429_ParamWaveformConfig@24" (ByVal configval As Long, ByVal highvolt As Long, ByVal lowvolt As Long, ByVal nullvolt As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_ParamWaveformConfigEx Lib "BTI429.DLL" Alias "_BTI429_ParamWaveformConfigEx@16" (ByVal configval As Long, ByRef paramflds As PARAMFIELDS429, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched1Build Lib "BTI429.DLL" Alias "_BTI429_Sched1Build@44" (ByVal basevalmsgnum As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiodin As Long, ByRef maxperiodin As Long, ByVal speed As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched2AdvanceMessage Lib "BTI429.DLL" Alias "_BTI429_Sched2AdvanceMessage@48" (ByVal entries As Long, ByVal panicindex As Long, ByVal nummsgs As Long, ByVal infoptr As Long, ByRef nextdeltaptr As Long, ByVal ulmastertimer As Long, ByRef msgaddrptr As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched2AdvanceNoMessage Lib "BTI429.DLL" Alias "_BTI429_Sched2AdvanceNoMessage@40" (ByVal nummsgs As Long, ByVal infoptr As Long, ByRef nextdeltaptr As Long, ByVal ulmastertimer As Long, ByRef msgaddrptr As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_Sched2Analyze Lib "BTI429.DLL" Alias "_BTI429_Sched2Analyze@8" (ByVal nummsgs As Long, ByVal infoptr As Long)
Public Declare Function BTI429_Sched2Build Lib "BTI429.DLL" Alias "_BTI429_Sched2Build@40" (ByVal nummsgs As Long, ByRef msgaddrptr As Long, ByRef minlist As Long, ByRef maxlist As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched2BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched2BuildEx@28" (ByRef styleptr As Long, ByVal nummsgs As Long, ByRef minlist As Long, ByRef maxlist As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal interceptflag As Long) As Long
Public Declare Function BTI429_Sched2BuildExx Lib "BTI429.DLL" Alias "_BTI429_Sched2BuildExx@60" (ByVal style As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal nummsgs As Long, ByRef minlist As Long, ByRef maxlist As Long, ByRef entriesptr As Long, ByRef maxentriesptr As Long, ByVal infoptr As Long, ByRef msgaddrptr As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched3Build Lib "BTI429.DLL" Alias "_BTI429_Sched3Build@40" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched3BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched3BuildEx@44" (ByVal basevalmsgnum As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiodin As Long, ByRef maxperiodin As Long, ByVal speed As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched3Calc Lib "BTI429.DLL" Alias "_BTI429_Sched3Calc@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_Sched3Check Lib "BTI429.DLL" Alias "_BTI429_Sched3Check@12" (ByRef minperiod As Long, ByRef maxperiod As Long, ByVal infoptr As Long) As Long
Public Declare Function BTI429_Sched3ToBit Lib "BTI429.DLL" Alias "_BTI429_Sched3ToBit@8" (ByVal value As Long, ByVal infoptr As Long) As Long
Public Declare Function BTI429_Sched4AdvanceMessage Lib "BTI429.DLL" Alias "_BTI429_Sched4AdvanceMessage@48" (ByVal entries As Long, ByVal panicindex As Long, ByVal nummsgs As Long, ByVal infoptr As Long, ByRef nextdeltaptr As Long, ByVal ulmastertimer As Long, ByRef msgaddrptr As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched4AdvanceNoMessage Lib "BTI429.DLL" Alias "_BTI429_Sched4AdvanceNoMessage@40" (ByVal nummsgs As Long, ByVal infoptr As Long, ByRef nextdeltaptr As Long, ByVal ulmastertimer As Long, ByRef msgaddrptr As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI429_Sched4Analyze Lib "BTI429.DLL" Alias "_BTI429_Sched4Analyze@8" (ByVal nummsgs As Long, ByVal infoptr As Long)
Public Declare Function BTI429_Sched4Build Lib "BTI429.DLL" Alias "_BTI429_Sched4Build@40" (ByVal nummsgs As Long, ByRef msgaddrptr As Long, ByRef minlist As Long, ByRef maxlist As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_Sched4BuildEx Lib "BTI429.DLL" Alias "_BTI429_Sched4BuildEx@40" (ByRef styleptr As Long, ByVal nummsgs As Long, ByVal minorframetime As Long, ByVal majorframetime As Long, ByRef targetlist As Long, ByRef minlist As Long, ByRef maxlist As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal interceptflag As Long) As Long
Public Declare Function BTI429_Sched4BuildExx Lib "BTI429.DLL" Alias "_BTI429_Sched4BuildExx@72" (ByVal style As Long, ByVal speedflag As Long, ByVal microflag As Long, ByVal debugvalflag As Long, ByVal tryflag As Long, ByVal nummsgs As Long, ByVal minorframetime As Long, ByVal majorframetime As Long, ByRef targetlist As Long, ByRef minlist As Long, ByRef maxlist As Long, ByRef entriesptr As Long, ByRef maxentriesptr As Long, ByVal infoptr As Long, ByRef msgaddrptr As Long, ByVal interceptflag As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedAdvance Lib "BTI429.DLL" Alias "_BTI429_SchedAdvance@4" (ByVal infoptr As Long) As Long
Public Declare Function BTI429_SchedAgain Lib "BTI429.DLL" Alias "_BTI429_SchedAgain@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBranchEx Lib "BTI429.DLL" Alias "_BTI429_SchedBranchEx@20" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildAlt Lib "BTI429.DLL" Alias "_BTI429_SchedBuildAlt@24" (ByVal nummsgs As Long, ByRef msgaddrs As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildBuf Lib "BTI429.DLL" Alias "_BTI429_SchedBuildBuf@32" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal bufcount As Long, ByRef bufptr As Byte, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildBufEx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildBufEx@48" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal debugval As Long, ByVal microflag As Long, ByVal algorithm As Long, ByVal bufcount As Long, ByRef bufptr As Byte, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildEx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildEx@28" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI429_SchedBuildExx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExx@40" (ByVal basevalmsgnum As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal speed As Long, ByVal buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
